--- a/mulyu/httpd.conf
+++ b/mulyu/httpd.conf
@@ -215,7 +215,7 @@ LogLevel warn
     # (Combined Logfile Format) you can use the following directive.
     #
     CustomLog "logs/access_log" combined
-    CustomLog "logs/access_log_wt" with_time
+    CustomLog "/home/isucon/logs/access_log_wt" with_time
 </IfModule>
 
 <IfModule alias_module>
