--- a/mulyu/isucon.conf
+++ b/mulyu/isucon.conf
@@ -1,5 +1,14 @@
-<VirtualHost *:80>
-  <Location />
-    ProxyPass http://localhost:5000/
-  </Location>
-</VirtualHost>
+server{
+	listen  	80 default_server;
+	server_name	54.65.177.246;
+	location / {
+		proxy_pass	http://localhost:5000/;
+    		proxy_set_header X-Forwarded-Host $host;
+	}
+	location ~* \.(css|js|png|ico)$ {
+		root		/home/isucon/webapp/go/public/;
+		expires 	10m;
+		gzip_static 	always;
+		gunzip 		on;
+	}
+}
