--- a/suiyujin/my.cnf
+++ b/suiyujin/my.cnf
@@ -8,7 +8,19 @@
 
 # Remove leading # and set to the amount of RAM for the most important data
 # cache in MySQL. Start at 70% of total RAM for dedicated server, else 10%.
-# innodb_buffer_pool_size = 128M
+innodb_buffer_pool_size = 10G
+innodb_additional_mem_pool_size = 20M
+innodb_log_buffer_size = 64M
+
+read_buffer_size = 256K
+read_rnd_buffer_size = 2M
+sort_buffer_size = 4M
+
+query_cache_limit = 16M
+query_cache_size = 512M
+query_cache_type = 1
+
+
 
 # Remove leading # to turn on a very important data integrity option: logging
 # changes to the binary log between backups.
